2008-12-23  Josselin Mouette  <joss@malsain.org>

	* src/yelp-window.c: (window_do_load_html):
	- Load local files with g_file_new_for_path.
	- Do not loop endlessly over the end of file while
          reading it.
	Fixes bug #562137 - fails to load local HTML files

== 2.24.0 ==

2008-09-22  Don Scorgie  <dscorgie@svn.gnome.org>

	* NEWS: 
	* configure.in:
	Version 2.24.0

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* yelp.desktop.in.in:
	Add yelp to the "Documentation" fd.o category
	part of bug #552128

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-document.c (request_idle_final):
	Fix potential crasher on multi-core machines
	bug #551757 -  Joe Marcus Clarke

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Improved a11y under gecko 1.9
	- Yet more work on bug #545162 from Ginn Chen

2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Reinstate previous timeout workaround as it's still required

2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Add workaround for Gecko 1.9 accessibility issue
	bug #545162 - Ginn Chen

== 2.23.91 ==
	
2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>

	* NEWS:
	Version 2.23.91

	* src/yelp-utils.c (resolve_full_file):
	Make text files actually work (i.e. open external vewing program)

2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c (resolve_is_man_path):
	Don't crash when trying to load text files
	bug #549986 - Josselin Mouette

2008-08-14  J.H.M. Dassen (Ray)  <jdassen@debian.org>

	* src/yelp-info-parser.c (yelp_info_parser_parse_file):
	Allocate iter through g_slice_alloc0 instead of g_malloc0.
	iter is wrapped in a hash table and later freed by gtk_tree_iter_free,
	which uses g_slice_free.
	bug #520266, "Crash when viewing glibc manual".
	Analysis by Matthias Clasen.

2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.91.

==================== 2.23.2 ====================